got the general headings in
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -96,22 +96,48 @@ To.~Be \textsc{Decided}
 \newpage
 
 \section{Introduction}
-blabla
+\subsection{Drones}
+\subsection{Autonomous Systems}
+\subsection{Making Money}
+
 
 %**********************************************%
 \newpage
 \section{Background}
-blabla
+
+\subsection{Delivery Networks}
+\subsubsection{Planes}
+\subsubsection{Trucks}
+\subsubsection{Drones}
+
+\subsection{Drone Deliveries}
+
+\subsection{AATC - Autonomous Air Traffic Control}
+\subsubsection{What is AATC?}
+\subsubsection{Global Layer}
+\subsubsection{Reactive Layer}
+\subsubsection{Where to take it next?}
+
+\subsection{Scheduling}
+\subsubsection{Type 1}
+\subsubsection{Type 2}
+\subsubsection{Type 3}
+\subsubsection{What about the delivery use-case?}
+
+\subsection{Time-Based Delivery}
 
 %**********************************************%
 \newpage
 \section{Project Plan}
-blabla \cite{Dorling2017}
+\subsection{Phase 1}
+\subsection{Phase 2}
+\subsection{Phase 3}
+\subsection{Stretch Goals}
 
 %**********************************************%
 \newpage
 \section{Evaluation Plan}
-blabla
+
 
 %**********************************************%
 %\newpage
