--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -22,6 +22,7 @@
 \fancyhead[L]{\textit{\nouppercase{\rightmark}}}
 \fancyhead[R]{\thepage}
 
+\setlength{\parindent}{0em}
 
 \begin{document}
 
@@ -44,8 +45,8 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Large Scale Drone Simulation on SpatialOS - Interim Report}\\[0.4cm] % Title of your document
-\HRule \\[1cm]
+{ \huge \bfseries Drone Delivery Network Simulation on SpatialOS\\\textit{Interim Report}}\\[0.4cm] % Title of your document
+\HRule \\[0.4cm]
 
 %----------------------------------------------------------------------------------------
 %	AUTHOR SECTION
@@ -72,7 +73,7 @@ To.~Be \textsc{Decided}
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-% {\large \today}\\[0.5cm] % Date, change the \today to a set date if you want to be precise
+{\large \today}\\[0.5cm] % Date, change the \today to a set date if you want to be precise
 
 
 \vfill % Fill the rest of the page with whitespace
@@ -105,39 +106,50 @@ To.~Be \textsc{Decided}
 \newpage
 \section{Background}
 
-\subsection{Delivery Networks}
-\subsubsection{Planes}
-\subsubsection{Trucks}
-\subsubsection{Drones}
+\subsection{Drone Considerations}
+\subsubsection{No Fly Zones}
+\subsubsection{Toll Zones}
+\subsubsection{Manned Aviation}
+\subsubsection{Other Drones}
 
-\subsection{Drone Deliveries}
-
-\subsection{AATC - Autonomous Air Traffic Control}
+\subsection{Autonomous Air Traffic Control (AATC)}
 \subsubsection{What is AATC?}
 \subsubsection{Global Layer}
 \subsubsection{Reactive Layer}
 \subsubsection{Where to take it next?}
 
-\subsection{Scheduling}
-\subsubsection{Type 1}
-\subsubsection{Type 2}
-\subsubsection{Type 3}
-\subsubsection{What about the delivery use-case?}
+\subsection{Delivery Networks}
+\subsubsection{Planes}
+\subsubsection{Trucks}
+\subsubsection{Drones}
 
-\subsection{Time-Based Delivery}
+\subsection{Prioritising Economic Value}
+\subsubsection{Quality of Service}
+\subsubsection{Value Curve}
+\subsubsection{skdbsa}
+
+\subsection{SpatialOS}
+\subsubsection{Unity SDK}
+\subsubsection{Layered Simulation}
+\subsubsection{Distributed Simulation}
+Example text 1\\
+
+Example text 2\\
+
+Example text 3
 
 %**********************************************%
 \newpage
 \section{Project Plan}
-\subsection{Phase 1}
-\subsection{Phase 2}
-\subsection{Phase 3}
+\subsection{Phase 1: Porting Global and Reactive Layers to SpatialOS}
+\subsection{Phase 2: Implementing a Scheduling Layer}
+\subsection{Phase 3: Visualising the Economic Value}
 \subsection{Stretch Goals}
 
 %**********************************************%
 \newpage
 \section{Evaluation Plan}
-
+\cite{Balaji2017}
 
 %**********************************************%
 %\newpage
@@ -153,11 +165,11 @@ To.~Be \textsc{Decided}
 
 \newpage
 
-\begin{appendices}
-\section{write something}
-The contents...
-\section{write something else}
-The contents...
-\end{appendices}
+%\begin{appendices}
+%\section{write something}
+%The contents...
+%\section{write something else}
+%The contents...
+%\end{appendices}
 
 \end{document}
