--- a/dissertation/refs.bib
+++ b/dissertation/refs.bib
@@ -1,3 +1,26 @@
+@techreport{Balaji2017,
+author = {Balaji, Paul and Cattle, David and Janoscikova, Andrea and Peycheva, Galina and Matas, Jan and Wood, Samuel},
+file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/AATC{\_}report.pdf:pdf},
+pages = {39},
+title = {{Autonomous Air Traffic Control}},
+year = {2017}
+}
+@article{Lea2003,
+author = {Lea, Chin-tau},
+file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/cost-based qos routing.pdf:pdf},
+isbn = {0780379454},
+number = {C},
+pages = {485--490},
+title = {{Cost-based QoS Routing}},
+volume = {00},
+year = {2003}
+}
+@misc{,
+booktitle = {forums.improbable.io},
+title = {{Crowd Sim In SpatialOS: How to scale a deployment?}},
+url = {https://forums.improbable.io/t/crowd-sim-in-spatialos-how-to-scale-a-deployment/2547},
+urldate = {2018-01-17}
+}
 @article{Meilander,
 author = {Meilander, Will and Baker, Johnnie and Jin, Mingxian and Oh, Kent},
 file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/Predictable Real-Time Scheduling for Air Traffic Control.pdf:pdf},
