updated interim report
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -105,8 +105,17 @@ To.~Be \textsc{Decided}
 %**********************************************%
 \newpage
 \section{Background}
+We first provide an insight into drones, and the considerations to take into account when applying them in day to day life. Additionally we summarise previous work done by Imperial students on autonomous air traffic control. \\
 
-\subsection{Drone Considerations}
+We then continue to discuss modern delivery networks and introduce a mechanism by which economic value is prioritised. Finally, we give details about Improbable's SpatialOS and the reasoning for using this platform for the drone simulation.
+
+\subsection{Drones}
+Drone technology is becoming increasingly popular. Their agility and ability to be used remotely makes them ideal for a number of use cases in  numerous industries such as film, law enforcement, emergency services, agriculture and commercial delivery. \\
+
+Due to numerous advances in technology, drones are quickly advancing to the point where human input is no longer a necessity. This has led to many companies showing interest in integrating drones with their work in the coming years. \\
+
+Although it may be an engineer's dream for a fully automated world, drones in particular could end up as a harrowing reminder that 
+
 \subsubsection{No Fly Zones}
 \subsubsection{Toll Zones}
 \subsubsection{Manned Aviation}
