--- a/dissertation/refs.bib
+++ b/dissertation/refs.bib
@@ -1,3 +1,10 @@
+@article{Welch2015,
+author = {Welch, Adrienne},
+file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/A cost-benefit analysis of Amazon Prime Air.pdf:pdf},
+pages = {57},
+title = {{A cost-benefit analysis of Amazon Prime Air A Cost-Benefit Analysis of Amazon Prime Air}},
+year = {2015}
+}
 @techreport{Balaji2017,
 author = {Balaji, Paul and Cattle, David and Janoscikova, Andrea and Peycheva, Galina and Matas, Jan and Wood, Samuel},
 file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/AATC{\_}report.pdf:pdf},
@@ -14,6 +21,14 @@ pages = {485--490},
 title = {{Cost-based QoS Routing}},
 volume = {00},
 year = {2003}
+}
+@misc{BBCNews2017,
+author = {{BBC News}},
+booktitle = {BBC News},
+title = {{Passenger jet approaching Heathrow in drone 'near-miss'}},
+url = {http://www.bbc.co.uk/news/uk-england-london-39457371},
+urldate = {2018-01-23},
+year = {2017}
 }
 @misc{,
 booktitle = {forums.improbable.io},
