--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -98,7 +98,7 @@ To.~Be \textsc{Decided}
 \newpage
 
 \section{Introduction}
-Drone technology is becoming increasingly popular. Their agility and ability to be used remotely makes them ideal for a number of use cases in  numerous industries such as film, law enforcement, emergency services, agriculture and commercial delivery. \\
+Drone technology is becoming increasingly popular. Their agility and ability to be used remotely makes them ideal for a number of use cases in  numerous industries such as film, law enforcement, emergency services, agriculture and commercial delivery\cite{Koontz}. \\
 
 Due to numerous advances in technology, drones are quickly advancing to the point where human input is no longer a necessity. This has led to many companies showing interest in integrating drones with their work in the coming years. \\
 
@@ -154,6 +154,22 @@ These charges could also be used as an incentive to reduce pollution in the toll
 
 \subsection{Autonomous Air Traffic Control (AATC)}
 \subsubsection{What is AATC?}
+During the Autumn Term of the 2016-17 academic year, several students undertook a group project in association with Microsoft and Altitude Angel to produce an autonomous air traffic control system. The goal of the project was to safely navigate drones from their start to their end goals, whilst avoiding obstacles and taking the shortest possible path to minimise battery use.
+
+\subsubsection{Technical Overview}
+AATC has a simple client-server architecture, where drones connect to the REST service to send their telemetry information and goal waypoints every second. The server sends back direction recommendations to navigate the drone to its destination. \\
+
+Because it would have been too expensive to trial the system on actual drones, a test bench was also implemented that would simulate the drones polling the server and responding to its recommendations. This test bench produced a set of simulation data, that is then available to view on the AATC visualiser\cite{Balaji2017a}.
+
+\begin{figure}[!hbpt]
+  \includegraphics[width=\linewidth]{img/aatc_tech_overview.png}
+  \caption{Technical Overview of AATC\cite{Balaji2017}.}
+\end{figure}
+
+The system was designed with two challenges in mind. The first challenge was to route drones from their origins to their destinations, and secondly, to ensure they avoided collisions with both static and dynamic obstacles - such as the ones mentioned in Section 2.1. \\
+
+To this end, a \textit{Global Layer} was built to deal with static obstacles (such as NFZs) by calculating a path for the drone around NFZs before it begins its journey. The second problem was tackled with a \textit{Reactive Layer} that handles non-static obstacles (such as manned aviation and other drones). This is the layer that would be providing the real-time updates to drones as they poll the server every second.
+
 \subsubsection{Global Layer}
 \subsubsection{Reactive Layer}
 \subsubsection{Where to take it next?}
