wrote some more backup init
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -125,7 +125,7 @@ However, prior work has been done on the routing and navigation aspect of such a
 %**********************************************%
 \newpage
 \section{Background}
-We first provide an insight into drones, and the considerations to account for when applying them in day to day life. Additionally we summarise previous work done by Imperial students on autonomous air traffic control. \\
+We first provide an insight into drones, and the considerations to account for when applying them in day to day life. Additionally we summarise prior work completed by Imperial students on an autonomous air traffic control system. \\
 
 We then continue to discuss modern delivery networks and introduce a mechanism by which economic value is prioritised. Finally, we give details about Improbable's SpatialOS and the reasoning for using this platform for the drone simulation.
 
@@ -174,7 +174,9 @@ To this end, a \textit{Global Layer} was built to deal with static obstacles (su
 This layer holds the static representation of the world so that given a start and end, it can compute an optimal set of waypoints that a drone should follow.
 
 \subsubsection{Reactive Layer}
-This layer considers any dynamic obstacles that the drone may face, such as manned aviation, other drones and potentially dynamic NFZs.
+This layer considers any dynamic obstacles that the drone may face, such as manned aviation, other drones and potentially dynamic NFZs.\\
+
+Gobbledygoop
 
 
 \subsubsection{Where to take it next?}
