--- a/dissertation/refs.bib
+++ b/dissertation/refs.bib
@@ -1,3 +1,23 @@
+@article{Uras2015,
+author = {Uras, Tansel and Koenig, Sven},
+doi = {10.1002/bse},
+file = {:Users/paul/Documents/FinalYear/IndividualProject/dissertation/references/An Empirical Comparison of Any-Angle Path-Planning Algorithms.pdf:pdf},
+journal = {Aaai},
+title = {{An Empirical Comparison of Any-Angle Path-Planning Algorithms}},
+year = {2015}
+}
+@misc{Root,
+author = {Root, Lynn},
+title = {{Python implementation of Dijkstra's Algorithm}},
+url = {https://gist.github.com/econchick/4666413},
+urldate = {2018-01-25}
+}
+@misc{Wikipedia,
+author = {Wikipedia},
+title = {{Dijkstra's Algorithm Pseudocode}},
+url = {https://en.wikipedia.org/wiki/Dijkstra{\%}27s{\_}algorithm{\#}Pseudocode},
+urldate = {2018-01-25}
+}
 @misc{Balaji2017a,
 author = {Balaji, Paul and Cattle, David and Janoscikova, Andrea and Peycheva, Galina and Matas, Jan and Wood, Samuel},
 title = {{AATC Visualiser}},
